[metadata]
name = interpcl
version = attr: interpcl.__version__
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = interpolate angular power spectra
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/ntessore/interpcl
project_urls =
    Documentation = https://cltools.readthedocs.io/interpcl/
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
py_modules = interpcl
